# serializer version: 1
# name: test_feature_gets_project_from_config
  'test_project'
# ---
# name: test_feature_project_different_configs
  dict({
    'feature_a': 'project_a',
    'feature_b': 'project_b',
  })
# ---
# name: test_feature_project_persists_across_graph_operations
  dict({
    'project': 'persist_project',
    'tracking_version': 'dbe34182',
  })
# ---
# name: test_multiple_features_same_project
  'shared_project'
# ---
